--- a/src/styles.css
+++ b/src/styles.css
@@ -6,12 +6,129 @@
 
 #main {
 	display: flex;
+	flex-flow: column;
 	align-items: center;
 	justify-content: center;
+	gap: 12px;
+
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 }
 
 #canvas {
 	background-color: aliceblue;
+	border-radius: 6px;
+}
+
+.info-item {
+	width: 288px;
+	height: 50px;
+
+	font-family: sans-serif;
+	font-size: 1.2em;
+	font-weight: bold;
+
+	border-radius: 6px;
+
+	color: rgb(57, 52, 84);
+}
+
+#info {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	border: 1px solid rgb(57, 52, 84, 0.3);
+}
+
+#get-reward {
+	cursor: pointer;
+  visibility: hidden;
+	pointer-events: none;
+	opacity: 0;
+
+  transition: opacity 0.5s ease-in-out;
+
+	border: none;
+
+	background-color: rgb(255, 197, 71);
+}
+
+#reward-modal {
+	position: absolute;
+
+	display: none;
+	align-items: center;
+	justify-content: center;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(255, 255, 255, 0.6);
+}
+
+#reward-block {
+	position: relative;
+
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2rem;
+	gap: 2rem;
+
+	border-radius: 6px;
+	border: 1px solid rgb(57, 52, 84, 0.3);
+
+	background-color: rgb(247, 247, 242);
+
+	font-family: sans-serif;
+	font-size: 1.2em;
+	font-weight: bold;
+
+	color: rgb(57, 52, 84);
+}
+
+#close {
+	cursor: pointer;
+
+	position: absolute;
+	top: 10px;
+	right: 10px;
+
+	font-size: 0.8em;
+}
+
+#close:hover {
+	text-decoration: underline;
+}
+
+#reward-img {
+	object-fit: scale-down;
+
+	max-width: 500px;
+	max-height: 500px;
+	border-radius: 6px;
+}
+
+#reward-buttons {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 12px;
+	width: 100%;
+}
+
+.reward-button {
+	cursor: pointer;
+	height: 50px;
+
+	font-family: sans-serif;
+	font-size: 0.9em;
+	font-weight: bold;
+
+	border: none;
+	border-radius: 6px;
+
+	color: rgb(57, 52, 84);
+	background-color: rgb(255, 197, 71);
 }
